--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -8,3 +8,8 @@
     border: 2px solid #fff;
     justify-self: flex-end;
 }
+
+.profile__add-button:hover {
+    opacity: .6;
+    cursor: pointer;
+}
