--- a/blocks/elements/__card-like/elements__card-like.css
+++ b/blocks/elements/__card-like/elements__card-like.css
@@ -9,3 +9,8 @@
     background-color: transparent;
     margin: 5px 5px 0 0;
 }
+
+.elements__card-like:hover {
+    opacity: .5;
+    cursor: pointer;
+}
