--- a/pages/index.css
+++ b/pages/index.css
@@ -23,4 +23,15 @@
 @import url(../blocks/elements/__card-info/elements__card-info.css);
 @import url(../blocks/elements/__card-like/elements__card-like.css);
 
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
+
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__content/popup__content.css);
+@import url(../blocks/popup/__close/popup__close.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__button/popup__button.css);
+
 
