--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -5,3 +5,10 @@
     font-size: 18px;
     line-height: 1.22;
 }
+
+@media screen and (max-width: 419px) {
+    .profile__description {
+        font-size: 14px;
+        line-height: 1.2;
+    }
+}
