--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -5,3 +5,10 @@
     line-height: 1.22;
     color: #545454;
     }
+
+    @media screen and (max-width: 767px) {
+        .footer__copyright {
+            font-size: 14px;
+            line-height: 1.21;
+        }
+    }
