--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,3 +5,22 @@
     padding-top: 45px;
     border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
+
+@media screen and (max-width: 1024px) {
+    .header {
+        width: 90%;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .header {
+        min-height: 56px;
+        padding-top: 28px;
+    }
+}
+
+@media screen and (max-width: 424px) {
+    .header {
+        width: 100%;
+    }
+}
