--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,6 @@
 .page {
     max-width: 1280px;
+    min-width: 320px;
     background-color: #000;
     margin: 0 auto;
     -webkit-font-smoothing: antialiased;
