--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -6,3 +6,10 @@
     gap: 30px;
     align-items: center;
 }
+
+@media screen and (max-width: 867px) {
+    .profile {
+        display: flex;
+        flex-direction: column;
+    }
+}
