--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,7 +6,7 @@
 
 @media screen and (max-width: 1023px) {
     .footer {
-        max-width: calc(100% - 38px);
+        max-width: 90%;
     }
 }
 
