--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,5 +1,5 @@
 .popup__button {
-    min-height: 50px;
+    height: 50px;
     background-color: #000;
     font-weight: 400;
     font-size: 18px;
@@ -7,7 +7,7 @@
     text-align: center;
     color: #fff;
     border: none;
-    margin: 48px 0 37px 0;
+    margin: 48px 0 37px;
     padding: 0;
     border-radius: 2px;
 }
@@ -15,4 +15,11 @@
 .popup__button:hover {
     opacity: .8;
     cursor: pointer;
+}
+
+@media screen and (max-width: 424px) {
+    .popup__button {
+        height: 46px;
+        margin: 45px 0 25px;
+    }
 }
