--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -16,3 +16,11 @@
     opacity: .8;
     cursor: pointer;
 }
+
+@media screen and (max-width: 424px) {
+    .popup__close {
+        width: 20px;
+        height: 20px;
+        right: 0;
+    }
+}
