--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -6,3 +6,9 @@
     border-radius: 10px;
     position: relative;
 }
+
+@media screen and (max-width: 424px) {
+    .popup__content {
+        max-width: 282px;
+    }
+}
