--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -6,3 +6,12 @@
     color: #000;
     padding: 34px 0 54px;
 }
+
+@media screen and (max-width: 424px) {
+    .popup__title {
+        font-size: 18px;
+        margin: 0 auto;
+        width: calc(100% - 44px);
+        padding: 25px 0 75px;
+    }
+}
