add alternative fonts

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -9,5 +9,5 @@
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
     text-rendering: optimizeLegibility;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
