--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -3,7 +3,7 @@
     background-color: #000;
     font-weight: 400;
     font-size: 18px;
-    line-height: 22px;
+    line-height: 1.22;
     text-align: center;
     color: #fff;
     border: none;
@@ -21,5 +21,7 @@
     .popup__button {
         height: 46px;
         margin: 45px 0 25px;
+        font-size: 14px;
+        line-height: 1.21;
     }
 }
