--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -4,7 +4,7 @@
     font-size: 24px;
     line-height: 1.2;
     color: #000;
-    padding: 34px 0 54px;
+    padding: 34px 0 48px;
 }
 
 @media screen and (max-width: 424px) {
@@ -15,3 +15,6 @@
         padding: 25px 0 75px;
     }
 }
+
+/* отступы не по макету сделаны специально,
+    чтобы попасть в pixelperfect */
