--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -13,3 +13,10 @@
     opacity: .6;
     cursor: pointer;
 }
+
+@media screen and (max-width: 424px) {
+    .profile__add-button {
+        width: 282px;
+        background-size: 16px;
+    }
+}
