--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -3,3 +3,12 @@
         text-align: center;
     }
 }
+
+@media screen and (max-width: 424px) {
+    .profile__info {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
