--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -3,11 +3,17 @@
     font-weight: 500;
     font-size: 42px;
     line-height: 1.14;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 300px;
 }
 
 @media screen and (max-width: 424px) {
     .profile__name {
         font-size: 27px;
         line-height: 1.22;
+        max-width: 190px;
+        
     }
 }
