--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,4 +1,5 @@
 .profile {
+    max-width: 100%;
     padding: 40px 0 45px;
     color: #fff;
     display: grid;
@@ -11,5 +12,14 @@
     .profile {
         display: flex;
         flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 424px) {
+    .profile {
+        width: calc(100% - 38px);
+        margin: auto;
+        gap: 26px;
+        padding-bottom: 43px;
     }
 }
