--- a/blocks/elements/__item-image/elements__item-image.css
+++ b/blocks/elements/__item-image/elements__item-image.css
@@ -1,4 +1,6 @@
 .elements__item-image {
-    width: 100%;
+    width: 282px;
+    height: 282px;
+    background-size: cover;
     border-radius: 10px 10px 0 0;
 }
