--- a/blocks/elements/__card-like/elements__card-like.css
+++ b/blocks/elements/__card-like/elements__card-like.css
@@ -2,6 +2,7 @@
     background-image: url(../../../images/like.svg);
     background-size: contain;
     background-repeat: no-repeat;
+    background-position: center;
     width: 22px;
     height: 19px;
     border: none;
