--- a/pages/index.css
+++ b/pages/index.css
@@ -36,5 +36,11 @@
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__button/popup__button.css);
+@import url(../blocks/elements/__card-delete/elements__card-delete.css);
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__caption/popup__caption.css);
+@import url(../blocks/popup-picture/popup-picture.css);
+@import url(../blocks/popup/__content/_picture/popup__content_picture.css);
+@import url(../blocks/popup/__figure/popup__figure.css);
 
 
