--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -8,6 +8,12 @@
     position: relative;
 }
 
+@media screen and (max-width: 550px) {
+    .popup__content{
+        max-width: 320px;
+    }
+}
+
 @media screen and (max-width: 424px) {
     .popup__content {
         max-width: 282px;
