--- a/pages/index.css
+++ b/pages/index.css
@@ -42,5 +42,8 @@
 @import url(../blocks/popup-picture/popup-picture.css);
 @import url(../blocks/popup/__content-picture/popup__content-picture.css);
 @import url(../blocks/popup/__figure/popup__figure.css);
+@import url(../blocks/popup/__input/_type_error/popup__input_type_error.css);
+@import url(../blocks/error-message/error-message.css);
+@import url(../blocks/popup/__button/_disabled/popup__button_disabled.css);
 
 
