--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -7,7 +7,8 @@
     text-align: center;
     color: #fff;
     border: none;
-    margin: 48px 0 37px;
+    /* margin: 48px 0 37px; */
+    margin-bottom: 37px;
     padding: 0;
     border-radius: 2px;
 }
