--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -4,6 +4,8 @@
     margin: 0 auto;
     max-width: calc(100% - 72px);
     height: 100%;
+    justify-content: space-between;
+    height: 219px;
 }
 
 @media screen and (max-width: 424px) {
