--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -8,9 +8,9 @@
     outline: none;
 }
 
-.popup__input:last-of-type {
+/* .popup__input:last-of-type {
     margin-top: 30px;
-}
+} */
 
 /* отступы не по макету сделаны специально,
     чтобы попасть в pixelperfect */
