--- a/pages/index.css
+++ b/pages/index.css
@@ -45,5 +45,4 @@
 @import url(../blocks/popup/__input/_type_error/popup__input_type_error.css);
 @import url(../blocks/error-message/error-message.css);
 @import url(../blocks/popup/__button/_disabled/popup__button_disabled.css);
-
-
+@import url(../blocks/popup/__form-label/popup__form-label.css);
