--- a/blocks/popup/__error/popup__error.css
+++ b/blocks/popup/__error/popup__error.css
@@ -1,6 +1,8 @@
-.error-message {
+.popup__error {
   color: #FF0000;
   font-weight: 400;
   font-size: 12px;
   line-height: 15px;
+  min-height: 12px;
+  visibility: hidden;
 }
