hotfix after review.1

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -11,10 +11,10 @@
     visibility: hidden;
     opacity: 0;
     transition: .5s;
-};
+}
 
 .popup_isOpen {
     visibility: visible;
     opacity: 1;
     transition: .5s;
-};
+}
