--- a/build.css
+++ b/build.css
@@ -29,7 +29,7 @@
 /*!*************************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[0].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/profile/__avatar/profile__avatar.css ***!
   \*************************************************************************************************************************************************************************/
-.profile__avatar{border-radius:50%;height:120px;-o-object-fit:contain;object-fit:contain;width:120px}
+.profile__avatar{border-radius:50%;height:120px;-o-object-fit:cover;object-fit:cover;width:120px}
 /*!*********************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[0].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/profile/__name/profile__name.css ***!
   \*********************************************************************************************************************************************************************/
@@ -166,6 +166,30 @@
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[0].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/__error/_visible/popup__error_visible.css ***!
   \************************************************************************************************************************************************************************************/
 .popup__error_visible{visibility:visible}
+/*!*************************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[0].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/elements/__card-like-counter/elements__card-like-counter.css ***!
+  \*************************************************************************************************************************************************************************************************/
+.elements__card-like-counter{font-size:13px;font-weight:400;line-height:16px;padding-right:5px;text-align:center}
+/*!*************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[0].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/__content-delete/popup__content-delete.css ***!
+  \*************************************************************************************************************************************************************************************/
+.popup__content-delete{background:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);display:flex;flex-direction:column;height:181px;max-width:430px;position:relative;width:100%}@media screen and (max-width:550px){.popup__content-delete{max-width:320px}}@media screen and (max-width:424px){.popup__content-delete{max-width:282px}}
+/*!*********************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[0].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/__card-del-btn/popup__card-del-btn.css ***!
+  \*********************************************************************************************************************************************************************************/
+.popup__card-del-btn{align-self:center;margin:0 auto;width:calc(100% - 72px)}
+/*!*****************************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[0].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/profile/__button-change-avatar/profile__button-change-avatar.css ***!
+  \*****************************************************************************************************************************************************************************************************/
+.profile__button-change-avatar{background-color:rgba(0,0,0,.8);background-image:url(images/changeavatarpencil.a086f758840ae814ecde.svg);background-position:50%;background-repeat:no-repeat;border:none;border-radius:50%;height:120px;opacity:0;padding:0;position:absolute;transition:opacity,.3s linear;width:120px}.profile__button-change-avatar:hover{cursor:pointer;opacity:.8}
+/*!*************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[0].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/__content-avatar/popup__content-avatar.css ***!
+  \*************************************************************************************************************************************************************************************/
+.popup__content-avatar{background:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);display:flex;flex-direction:column;height:272px;max-width:430px;position:relative;width:100%}@media screen and (max-width:550px){.popup__content-avatar{max-width:320px}}@media screen and (max-width:424px){.popup__content-avatar{max-width:282px}}
+/*!***************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[0].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/__form-add-avatar/popup__form-add-avatar.css ***!
+  \***************************************************************************************************************************************************************************************/
+.popup__form-add-avatar{width:calc(100% - 72px)}
 /*!*********************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[0].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/pages/index.css ***!
   \*********************************************************************************************************************************************/
