--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -7,7 +7,6 @@
     text-align: center;
     color: #fff;
     border: none;
-    /* margin: 48px 0 37px; */
     margin-bottom: 37px;
     padding: 0;
     border-radius: 2px;
@@ -16,6 +15,11 @@
 .popup__button:hover {
     opacity: .8;
     cursor: pointer;
+}
+
+.popup__button:disabled {
+    cursor: default;
+    opacity: .2;
 }
 
 @media screen and (max-width: 424px) {
