--- a/src/blocks/popup/__form/popup__form.css
+++ b/src/blocks/popup/__form/popup__form.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-    max-width: calc(100% - 72px);
+    width: calc(100% - 72px);
     justify-content: space-between;
     height: 219px;
 }
